fix content spacing issues

--- a/res/less/components/content.less
+++ b/res/less/components/content.less
@@ -35,13 +35,9 @@
 
 .content-striped {
     height: 3.75rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     display: flex;
     align-items: center;
-
-    .on-small-devices({
-        height: 3.25rem;
-    });
 }
 
 .content-spacer {
@@ -117,7 +113,7 @@
 }
 
 .content-preview-list {
-    margin: -1rem 0 0;
+    margin: 0;
     padding: 0;
     position: relative;
 
@@ -308,11 +304,6 @@
     > :only-child {
         align-self: flex-end;
     }
-}
-
-.content-data + .content-teaser {
-    position: relative;
-    top: -.75rem;
 }
 
 .link-plain {
