--- a/res/less/components/disclaimer.less
+++ b/res/less/components/disclaimer.less
@@ -28,5 +28,5 @@
 }
 
 .disclaimer-standalone {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
